# alquilerInfraestructura

./: .gitignore  ESPECIFICACION_TECNICA.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/auditoria/: servicio.py
backend/app/auth/: deps.py  ldap_client.py  service.py
backend/app/core/: checklist.py  config.py  exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/jobs/: cli_generacion_anual.py  cli_morosidad.py  cli_vencimientos.py  generacion_anual.py  morosidad.py  scheduler.py  vencimientos.py
backend/app/middlewares/: rate_limit.py  security_headers.py
backend/app/models/: __init__.py  _helpers.py  alerta.py  alquiler_anual.py  autorizacion.py  cable_operadora.py  catalogo_canon.py  contrato.py  documento.py  enums.py  informe_factibilidad.py  log_auditoria.py  mixins.py  novedad.py  pago.py  rol.py  solicitud.py  token_refresco.py  unidad_negocio.py  usuario.py
backend/app/routers/: alertas.py  alquileres_anuales.py  auth.py  catalogo_canon.py  contratos.py  pagos.py  (+8 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_alerta_service.py  test_alquiler_anual_service.py  test_auth_router.py  test_auth_service.py  test_cable_operadora_service.py  test_contrato_service.py  test_dashboard_service.py  test_documento_service.py  test_generacion_anual_job.py  test_morosidad_job.py  test_novedad_service.py  test_pago_service.py  test_rbac.py  test_roles_router.py  test_security.py  test_solicitud_service.py  test_vencimientos_job.py
(+136 files in other folders)
