[project]
name = "sgaie-backend"
version = "0.1.0"
description = "Backend del Sistema de Gestión de Arriendo de Infraestructura Eléctrica (SGAIE) - CNEL EP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "email-validator>=2.2.0",
    "pymysql>=1.1.1",
    "cryptography>=43.0.1",
    "pyjwt>=2.9.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "ldap3>=2.9.1",
    "apscheduler>=3.10.4",
    "python-docx>=1.1.2",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "black>=24.10.0",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
